codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__adjacent_plugin_completion_inserts_separator.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5313
expression: terminal.backend()
---
"▌                                                                                                   "
"▌ @sample @other                                                                                    "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"                                                                                 100% context left  "
