codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__backspace_after_pastes.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 9332
expression: terminal.backend()
---
"▌                                                                                                   "
"▌ [Pasted Content 1002 chars][Pasted Content 1004 chars]                                            "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"                                                                                 100% context left  "
